Adding SS-specific columns to table.